# indexerd

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: new_pr_to_main.yml
configs/: dev.json
indexerd-derive/: Cargo.toml
indexerd-derive/src/: lib.rs
proto/: req.proto  search_params.proto
scripts/: init_db.sh  run_dev_db.sh  run_release.sh
scripts/perf/: multiple-url-path.lua  paths.txt  run_perf.sh  run_perf_test.sh
src/: config.rs  db.rs  engine.rs  helpers.rs  main.rs  objects.rs  request.rs  server.rs  task.rs  worker.rs
src/data/: aci.rs  mod.rs  mysql_cdc_converter.rs  objects.rs  objects_traits.rs  raw_storage.rs  select.rs  slave.rs  store.rs  updater.rs
src/handlers/: admin.rs  mod.rs  search.rs
src/html_tpl/: admin.html  admin_store.html  admin_store_objects.html  admin_store_objects_detailed.html
src/objects/: campaign.rs  mod.rs  package.rs  pad.rs  targeting_pad.rs
src/request/: search_request.rs
src/store/: aci.rs  data_manager.rs  mod.rs  store.rs
