cargo-features = ["profile-rustflags"]

[package]
name = "indexerd"
version = "0.1.0"
edition = "2021"

[dependencies]
indexerd-derive = { path = "indexerd-derive" }
mysql_cdc = "0.2.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.118", features = ["derive"] }
actix-web = "4"
hwloc = "0.5.0" # https://nitschinger.at/Binding-Threads-And-Processes-to-CPUs-in-Rust/
tokio = "1.32.0"
ctrlc = "3.4.0"
tiny_http = "0.11"
crossbeam-channel = "0.5.8"
log = "0.4.20"
env_logger = "0.10.0"

[profile.dev]
# inherits = "dev"
rustflags = ["-L", "/opt/homebrew/Cellar/hwloc/2.9.2/lib/"]

[profile.release]
# inherits = "dev"
rustflags = ["-L", "/opt/homebrew/Cellar/hwloc/2.9.2/lib/"]