cargo-features = ["profile-rustflags"]

[package]
name = "indexerd"
version = "0.1.0"
edition = "2021"

[dependencies]
# serialization
indexerd-derive = { path = "indexerd-derive" }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
serde = { version = "1.0.193", features = ["derive"] }
strum_macros = "0.25.3"
strum = "0.25.0"

# db
mysql_cdc = "0.2.1"
mysql = "24.0.0"

# system
hwloc2 = "2.2.0" # https://nitschinger.at/Binding-Threads-And-Processes-to-CPUs-in-Rust/
ctrlc = "3.4.0"

# web-server
tiny_http = "0.12"
tera = "1"
include_dir = "0.7.1"
url = "2.4.1"

# logging
log = "0.4.20"
env_logger = "0.10.0"
logging_timer = "1.1.0"

# protobuf
protobuf = "3.3.0"
prost = "*"

# rest
crossbeam-channel = "0.5.8"
libc = "0.2.147"
base64 = "0.21.5"
anyhow = "1.0.77"


[build-dependencies]
prost-build = "0.12.1"

[profile.dev]
# inherits = "dev"
rustflags = ["-L", "/opt/homebrew/Cellar/hwloc/2.9.2/lib/"]

[profile.release]
# inherits = "dev"
rustflags = ["-L", "/opt/homebrew/Cellar/hwloc/2.9.2/lib/"]